Fix double scroll bars in frames

--- a/imports/ui/stylesheets/frame-list.scss
+++ b/imports/ui/stylesheets/frame-list.scss
@@ -1,4 +1,5 @@
 .frame-list {
+	height: 100%;
 	overflow-x: hidden;
 }
 
